--- a/index.html
+++ b/index.html
@@ -36,6 +36,42 @@
       </div>
     </nav>
 
+    <section id="profile">
+      <div class="section_pic-container">
+        <img src="./assets/profile_pic.png" alt="Nikhil's Profile Picture" />
+      </div>
+      <div class="section_text">
+        <p class="section_text_p1">Hello, I'm</p>
+        <h1 class="title">Nikhil Yadav</h1>
+        <p class="section_text_p2">Frontend Developer</p>
+        <div class="btn-container">
+          <div
+            class="btn btn-color-2"
+            onclick="window.open('./assets/Nikhil_Resume.pdf')"
+          >
+            Download CV
+          </div>
+          <div class="btn btn-color-1" onclick="location.href = '#contact'">
+            Contact Info
+          </div>
+        </div>
+        <div id="socials-container">
+          <img
+            src="./assets/linkedin.png"
+            alt="My Linkedin Profile"
+            class="icon"
+            onclick="location.href = 'https://www.linkedin.com/in/nikhilyadvv'"
+          />
+          <img
+            src="./assets/github.png"
+            alt="My Github Profile"
+            class="icon"
+            onclick="location.href = 'https://github.com/nikhilyadvv'"
+          />
+        </div>
+      </div>
+    </section>
+
     <script src="script.js"></script>
   </body>
 </html>
