Profile Section Updated

--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
             src="./assets/linkedin.png"
             alt="My Linkedin Profile"
             class="icon"
-            onclick="location.href = 'https://www.linkedin.com/in/nikhilyadvv'"
+            onclick="window.open('https://www.linkedin.com/in/nikhilyadvv', '_blank');"
           />
           <img
             src="./assets/github.png"
             alt="My Github Profile"
             class="icon"
-            onclick="location.href = 'https://github.com/nikhilyadvv'"
+            onclick="window.open('https://github.com/nikhilyadvv', '_blank');"
           />
         </div>
       </div>
