About Section + Favicon

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio - Nikhil Yadav</title>
+    <link rel="icon" type="image/x-icon" href="./assets/favicon.ico" />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="mediaqueries.css" />
   </head>
@@ -72,6 +73,90 @@
       </div>
     </section>
 
+    <section id="about">
+      <p class="section_text_p1">Get To Know More</p>
+      <h1 class="title">About Me</h1>
+      <div class="section-container">
+        <div class="section_pic-container">
+          <img
+            src="./assets/profile_pic.png"
+            alt="Profile Picture"
+            class="about-pic"
+          />
+        </div>
+        <div class="about-details-container">
+          <div class="about-containers">
+            <div class="detail-container">
+              <div class="detail-heading">
+                <img
+                  src="./assets/education.png"
+                  alt="Education icon"
+                  class="icon"
+                />
+                <h2>Education</h2>
+              </div>
+              <div class="education-details">
+                <div class="college">
+                  <div class="education-detail">
+                    <div class="education-detail-heading">
+                      <h3>B.Tech. in Computer Science Engineering</h3>
+                      <h5>Aug'20 - Jul'24</h5>
+                    </div>
+                    <div class="education-detail-details1">
+                      <div class="down-right-symbol">&#10551;</div>
+                      <div class="education-detail-details2">
+                        <h4>Lovely Professional University, Jalandhar</h4>
+                        <p>
+                          &#x2022; Current GPA : 7.70 <br />
+                          &#x2022; Minor in Full Stack Development <br />
+                          &#x2022; Elective in Tourism Destination
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="school">
+                  <div class="education-detail">
+                    <div class="education-detail-heading">
+                      <h3>Senior Secondary Education</h3>
+                      <h5>Apr'19 - Jun'20</h5>
+                    </div>
+                    <div class="education-detail-details1">
+                      <div class="down-right-symbol">&#10551;</div>
+                      <div class="education-detail-details2">
+                        <h4>Suraj School, Gurugram</h4>
+                        <p>
+                          &#x2022; Percentage : 95% <br />
+                          &#x2022; Board: Central Board of Secondary Education
+                          <br />
+                          &#x2022; Subjects : English, Physics, Chemistry,
+                          Mathematics
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="text-container">
+            <p>
+              As a Frontend Developer, My Portfolio page showcases my expertise
+              in creating visually appealing and user-friendly websites. With a
+              focus on clean and responsive design, I aim to create seamless
+              user experiences. Explore my work to see how I bring ideas to life
+              through code.
+            </p>
+          </div>
+        </div>
+      </div>
+      <img
+        src="./assets/arrow.png"
+        alt="Arrow icon"
+        class="icon arrow"
+        onclick="location.href='./#experience'"
+      />
+    </section>
     <script src="script.js"></script>
   </body>
 </html>
