--- a/index.html
+++ b/index.html
@@ -39,7 +39,11 @@
 
     <section id="profile">
       <div class="section_pic-container">
-        <img src="./assets/profile_pic.png" alt="Nikhil's Profile Picture" />
+        <img
+          src="./assets/profile_pic.png"
+          alt="Nikhil's Profile Picture"
+          class="profile-pic"
+        />
       </div>
       <div class="section_text">
         <p class="section_text_p1">Hello, I'm</p>
@@ -77,12 +81,8 @@
       <p class="section_text_p1">Get To Know More</p>
       <h1 class="title">About Me</h1>
       <div class="section-container">
-        <div class="section_pic-container">
-          <img
-            src="./assets/profile_pic.png"
-            alt="Profile Picture"
-            class="about-pic"
-          />
+        <div class="about-pic">
+          <img src="./assets/about-pic.jpg" alt="Profile Picture" />
         </div>
         <div class="about-details-container">
           <div class="about-containers">
@@ -140,7 +140,7 @@
             </div>
           </div>
           <div class="text-container">
-            <p>
+            <p class="about-description">
               As a Frontend Developer, My Portfolio page showcases my expertise
               in creating visually appealing and user-friendly websites. With a
               focus on clean and responsive design, I aim to create seamless
@@ -154,9 +154,215 @@
         src="./assets/arrow.png"
         alt="Arrow icon"
         class="icon arrow"
-        onclick="location.href='./#experience'"
+        onclick="location.href='#experience'"
       />
     </section>
+
+    <section id="experience">
+      <p class="section_text_p1">Explore My</p>
+      <h1 class="title">Experience</h1>
+      <div class="experience-details-container">
+        <div class="about-containers">
+          <div class="detail-container">
+            <h2 class="experience-subtitle">Technical Skills</h2>
+            <div class="article-container">
+              <article class="article-container-article">
+                <img src="./assets/java.png" alt="Java icon" class="icon" />
+                <div>
+                  <h3>Java</h3>
+                  <p>Intermediate</p>
+                </div>
+              </article>
+              <article class="article-container-article">
+                <img
+                  src="./assets/javascript.png"
+                  alt="Javascript icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>Javascript</h3>
+                  <p>Intermediate</p>
+                </div>
+              </article>
+              <article class="article-container-article">
+                <img
+                  src="./assets/reactjs.png"
+                  alt="Reactjs icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>ReactJs</h3>
+                  <p>Intermediate</p>
+                </div>
+              </article>
+              <article class="article-container-article">
+                <img src="./assets/html5.png" alt="HTML icon" class="icon" />
+                <div>
+                  <h3>HTML5</h3>
+                  <p>Experienced</p>
+                </div>
+              </article>
+              <article class="article-container-article">
+                <img src="./assets/css3.png" alt="CSS icon" class="icon" />
+                <div>
+                  <h3>CSS3</h3>
+                  <p>Intermediate</p>
+                </div>
+              </article>
+              <article class="article-container-article">
+                <img
+                  src="./assets/bootstrap.png"
+                  alt="Bootstrap icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>Bootstrap</h3>
+                  <p>Experienced</p>
+                </div>
+              </article>
+              <article class="article-container-article">
+                <img src="./assets/nodejs.png" alt="Nodejs icon" class="icon" />
+                <div>
+                  <h3>NodeJs</h3>
+                  <p>Intermediate</p>
+                </div>
+              </article>
+              <article class="article-container-article">
+                <img
+                  src="./assets/expressjs.png"
+                  alt="ExpressJs icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>ExpressJs</h3>
+                  <p>Intermediate</p>
+                </div>
+              </article>
+              <article class="article-container-article">
+                <img
+                  src="./assets/mongodb.png"
+                  alt="Mongodb icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>Mongodb</h3>
+                  <p>Intermediate</p>
+                </div>
+              </article>
+              <article class="article-container-article">
+                <img src="./assets/php.png" alt="PHP icon" class="icon" />
+                <div>
+                  <h3>PHP</h3>
+                  <p>Basic</p>
+                </div>
+              </article>
+              <article class="article-container-article">
+                <img src="./assets/git.png" alt="Git icon" class="icon" />
+                <div>
+                  <h3>Git/Github</h3>
+                  <p>Experienced</p>
+                </div>
+              </article>
+              <article class="article-container-article">
+                <img src="./assets/vscode.png" alt="vscode icon" class="icon" />
+                <div>
+                  <h3>VS Code</h3>
+                  <p>Experienced</p>
+                </div>
+              </article>
+            </div>
+          </div>
+          <div class="detail-container">
+            <h2 class="experience-subtitle">Certifications</h2>
+            <div class="article-container2">
+              <article class="article-container2-detail">
+                <img
+                  src="./assets/coursera.png"
+                  alt="Coursera icon"
+                  class="icon"
+                />
+                <div class="article-container-h3">
+                  <h3>HTML, CSS, and Javascript for Web Developers</h3>
+                  <div class="article-container-p">
+                    <p>(Coursera - Johns Hopkins University)</p>
+                    <a
+                      href="https://www.coursera.org/verify/47YJ72945QRY"
+                      target="_blank"
+                      class="article-container-a"
+                      >&#129170; verify</a
+                    >
+                  </div>
+                </div>
+              </article>
+              <article class="article-container2-detail">
+                <img
+                  src="./assets/gfg.png"
+                  alt="Geeksforgeeks icon"
+                  class="icon"
+                />
+                <div class="article-container-h3">
+                  <h3>Data Structures and Algorithms - Self Paced</h3>
+                  <div class="article-container-p">
+                    <p>(GeeksforGeeks - Sandeep Jain)</p>
+                    <a
+                      href="https://media.geeksforgeeks.org/courses/certificates/d77b3fb216d1bd26f9c78497f63bd410.pdf"
+                      target="_blank"
+                      class="article-container-a"
+                      >&#129170; verify</a
+                    >
+                  </div>
+                </div>
+              </article>
+              <article class="article-container2-detail">
+                <img
+                  src="./assets/coursera.png"
+                  alt="Coursera icon"
+                  class="icon"
+                />
+                <div class="article-container-h3">
+                  <h3>Divide & Conquer, Sorting and Searching algorithms</h3>
+                  <div class="article-container-p">
+                    <p>(Coursera - Stanford University)</p>
+                    <a
+                      href="https://coursera.org/verify/AJ7CQYH2YPFX"
+                      target="_blank"
+                      class="article-container-a"
+                      >&#129170; verify</a
+                    >
+                  </div>
+                </div>
+              </article>
+              <article class="article-container2-detail">
+                <img
+                  src="./assets/gcloud.png"
+                  alt="Google cloud icon"
+                  class="icon"
+                />
+                <div class="article-container-h3">
+                  <h3>Google Cloud Skill Badges (38 Badges, 200+Labs)</h3>
+                  <div class="article-container-p">
+                    <p>(Google Cloud Skills Boost)</p>
+                    <a
+                      href="https://www.cloudskillsboost.google/public_profiles/7440db6e-8d38-46eb-a0ab-f71e84acd5ca"
+                      target="_blank"
+                      class="article-container-a"
+                      >&#129170; verify</a
+                    >
+                  </div>
+                </div>
+              </article>
+            </div>
+          </div>
+        </div>
+      </div>
+      <img
+        src="./assets/arrow.png"
+        alt="Arrow icon"
+        class="icon arrow"
+        onclick="location.href='#projects'"
+      />
+    </section>
+
     <script src="script.js"></script>
   </body>
 </html>
