--- a/index.html
+++ b/index.html
@@ -363,6 +363,93 @@
       />
     </section>
 
+    <section id="projects">
+      <p class="section_text_p1">Browse My Recent</p>
+      <h1 class="title">Projects</h1>
+      <div class="experience-details-container">
+        <div class="about-containers">
+          <div class="detail-container color-container">
+            <div class="project-container">
+              <img
+                src="./assets/project.png"
+                alt="Project 1"
+                class="project-img"
+              />
+              <h2 class="experience-subtitle project-title">Project One</h2>
+              <div class="btn-container">
+                <button
+                  class="btn btn-color-2 project-btn"
+                  onclick="window.open('https://github.com/nikhilyadvv')"
+                >
+                  Github
+                </button>
+                <button
+                  class="btn btn-color-2 project-btn"
+                  onclick="window.open('https://nikhilyadav.tech')"
+                >
+                  Live Demo
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="detail-container color-container">
+            <div class="project-container">
+              <img
+                src="./assets/project.png"
+                alt="Project 2"
+                class="project-img"
+              />
+              <h2 class="experience-subtitle project-title">Project Two</h2>
+              <div class="btn-container">
+                <button
+                  class="btn btn-color-2 project-btn"
+                  onclick="window.open('https://github.com/nikhilyadvv')"
+                >
+                  Github
+                </button>
+                <button
+                  class="btn btn-color-2 project-btn"
+                  onclick="window.open('https://nikhilyadav.tech')"
+                >
+                  Live Demo
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="detail-container color-container">
+            <div class="project-container">
+              <img
+                src="./assets/project.png"
+                alt="Project 3"
+                class="project-img"
+              />
+              <h2 class="experience-subtitle project-title">Project Three</h2>
+              <div class="btn-container">
+                <button
+                  class="btn btn-color-2 project-btn"
+                  onclick="window.open('https://github.com/nikhilyadvv')"
+                >
+                  Github
+                </button>
+                <button
+                  class="btn btn-color-2 project-btn"
+                  onclick="window.open('https://nikhilyadav.tech')"
+                >
+                  Live Demo
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <img
+        src="./assets/arrow.png"
+        alt="Arrow icon"
+        class="icon arrow"
+        onclick="location.href='#experience'"
+      />
+    </section>
+
     <script src="script.js"></script>
   </body>
 </html>
