--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
         src="./assets/arrow.png"
         alt="Arrow icon"
         class="icon arrow"
-        onclick="location.href='#experience'"
+        onclick="location.href='#contact'"
       />
     </section>
 
