--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
     <section id="about">
       <p class="section_text_p1">Get To Know More</p>
-      <h1 class="title">About Me</h1>
+      <h1 class="title2">About Me</h1>
       <div class="section-container">
         <div class="about-pic">
           <img src="./assets/about-pic.jpg" alt="Profile Picture" />
@@ -160,7 +160,7 @@
 
     <section id="experience">
       <p class="section_text_p1">Explore My</p>
-      <h1 class="title">Experience</h1>
+      <h1 class="title2">Experience</h1>
       <div class="experience-details-container">
         <div class="about-containers">
           <div class="detail-container">
@@ -365,7 +365,7 @@
 
     <section id="projects">
       <p class="section_text_p1">Browse My Recent</p>
-      <h1 class="title">Projects</h1>
+      <h1 class="title2">Projects</h1>
       <div class="experience-details-container">
         <div class="about-containers">
           <div class="detail-container color-container">
@@ -452,7 +452,7 @@
 
     <section id="contact">
       <p class="section_text_p1">Get in Touch</p>
-      <h1 class="title">Contact Me</h1>
+      <h1 class="title2">Contact Me</h1>
       <div class="contact-info-outer-container">
         <div class="contact-info-container">
           <img
@@ -479,6 +479,21 @@
       </div>
     </section>
 
+    <footer>
+      <nav>
+        <div class="nav-links-container">
+          <ul class="nav-links">
+            <li><a href="#about">About</a></li>
+            <li><a href="#experience">Experience</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+        </div>
+      </nav>
+      <p>Copyright &#169; 2023 Nikhil Yadav. All Rights Reserved.</p>
+    </footer>
+
     <script src="script.js"></script>
   </body>
 </html>
+
