Mediaqueries and design updated

--- a/index.html
+++ b/index.html
@@ -81,12 +81,9 @@
       <p class="section_text_p1">Get To Know More</p>
       <h1 class="title2">About Me</h1>
       <div class="section-container">
-        <div class="about-pic">
-          <img src="./assets/about-pic.jpg" alt="Profile Picture" />
-        </div>
         <div class="about-details-container">
           <div class="about-containers">
-            <div class="detail-container">
+            <div class="education">
               <div class="detail-heading">
                 <img
                   src="./assets/education.png"
@@ -138,15 +135,25 @@
                 </div>
               </div>
             </div>
-          </div>
-          <div class="text-container">
-            <p class="about-description">
-              As a Frontend Developer, My Portfolio page showcases my expertise
-              in creating visually appealing and user-friendly websites. With a
-              focus on clean and responsive design, I aim to create seamless
-              user experiences. Explore my work to see how I bring ideas to life
-              through code.
-            </p>
+            <div class="experience">
+              <div class="detail-heading">
+                <img
+                  src="./assets/experience.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <h2>Experience</h2>
+              </div>
+              <div class="text-container">
+                <p>
+                  As a Frontend Developer, My Portfolio page showcases my
+                  expertise in creating visually appealing and user-friendly
+                  websites. With a focus on clean and responsive design, I aim
+                  to create seamless user experiences. Explore my work to see
+                  how I bring ideas to life through code.
+                </p>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -162,7 +169,7 @@
       <p class="section_text_p1">Explore My</p>
       <h1 class="title2">Experience</h1>
       <div class="experience-details-container">
-        <div class="about-containers">
+        <div class="about-containers experience-res">
           <div class="detail-container">
             <h2 class="experience-subtitle">Technical Skills</h2>
             <div class="article-container">
@@ -369,75 +376,75 @@
       <div class="experience-details-container">
         <div class="about-containers">
           <div class="detail-container color-container">
-            <div class="project-container">
+            <div class="article-container">
               <img
                 src="./assets/project.png"
                 alt="Project 1"
                 class="project-img"
               />
-              <h2 class="experience-subtitle project-title">Project One</h2>
-              <div class="btn-container">
-                <button
-                  class="btn btn-color-2 project-btn"
-                  onclick="window.open('https://github.com/nikhilyadvv')"
-                >
-                  Github
-                </button>
-                <button
-                  class="btn btn-color-2 project-btn"
-                  onclick="window.open('https://nikhilyadav.tech')"
-                >
-                  Live Demo
-                </button>
-              </div>
+            </div>
+            <h2 class="experience-subtitle project-title">Project One</h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="window.open('https://github.com/nikhilyadvv')"
+              >
+                Github
+              </button>
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="window.open('https://nikhilyadav.tech')"
+              >
+                Live Demo
+              </button>
             </div>
           </div>
           <div class="detail-container color-container">
-            <div class="project-container">
+            <div class="article-container">
               <img
                 src="./assets/project.png"
                 alt="Project 2"
                 class="project-img"
               />
-              <h2 class="experience-subtitle project-title">Project Two</h2>
-              <div class="btn-container">
-                <button
-                  class="btn btn-color-2 project-btn"
-                  onclick="window.open('https://github.com/nikhilyadvv')"
-                >
-                  Github
-                </button>
-                <button
-                  class="btn btn-color-2 project-btn"
-                  onclick="window.open('https://nikhilyadav.tech')"
-                >
-                  Live Demo
-                </button>
-              </div>
+            </div>
+            <h2 class="experience-subtitle project-title">Project Two</h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="window.open('https://github.com/nikhilyadvv')"
+              >
+                Github
+              </button>
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="window.open('https://nikhilyadav.tech')"
+              >
+                Live Demo
+              </button>
             </div>
           </div>
           <div class="detail-container color-container">
-            <div class="project-container">
+            <div class="article-container">
               <img
                 src="./assets/project.png"
                 alt="Project 3"
                 class="project-img"
               />
-              <h2 class="experience-subtitle project-title">Project Three</h2>
-              <div class="btn-container">
-                <button
-                  class="btn btn-color-2 project-btn"
-                  onclick="window.open('https://github.com/nikhilyadvv')"
-                >
-                  Github
-                </button>
-                <button
-                  class="btn btn-color-2 project-btn"
-                  onclick="window.open('https://nikhilyadav.tech')"
-                >
-                  Live Demo
-                </button>
-              </div>
+            </div>
+            <h2 class="experience-subtitle project-title">Project Three</h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="window.open('https://github.com/nikhilyadvv')"
+              >
+                Github
+              </button>
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="window.open('https://nikhilyadav.tech')"
+              >
+                Live Demo
+              </button>
             </div>
           </div>
         </div>
@@ -496,4 +503,3 @@
     <script src="script.js"></script>
   </body>
 </html>
-
