--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <section id="profile">
       <div class="section_pic-container">
         <img
-          src="./assets/profile_pic.png"
+          src="./assets/profile_pic.jpg"
           alt="Nikhil's Profile Picture"
           class="profile-pic"
         />
@@ -48,7 +48,7 @@
       <div class="section_text">
         <p class="section_text_p1">Hello, I'm</p>
         <h1 class="title">Nikhil Yadav</h1>
-        <p class="section_text_p2">Frontend Developer</p>
+        <p class="section_text_p2">Software Engineer</p>
         <div class="btn-container">
           <div
             class="btn btn-color-2"
@@ -224,7 +224,14 @@
                 />
                 <div>
                   <h3>Bootstrap</h3>
-                  <p>Experienced</p>
+                  <p>Intermediate</p>
+                </div>
+              </article>
+              <article class="article-container-article">
+                <img src="./assets/materialui.png" alt="MaterialUI icon" class="icon" />
+                <div>
+                  <h3>MaterialUI</h3>
+                  <p>Intermediate</p>
                 </div>
               </article>
               <article class="article-container-article">
@@ -254,13 +261,6 @@
                 <div>
                   <h3>Mongodb</h3>
                   <p>Intermediate</p>
-                </div>
-              </article>
-              <article class="article-container-article">
-                <img src="./assets/php.png" alt="PHP icon" class="icon" />
-                <div>
-                  <h3>PHP</h3>
-                  <p>Basic</p>
                 </div>
               </article>
               <article class="article-container-article">
@@ -378,22 +378,22 @@
           <div class="detail-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project.png"
+                src="./assets/clime.png"
                 alt="Project 1"
                 class="project-img"
               />
             </div>
-            <h2 class="experience-subtitle project-title">Project One</h2>
+            <h2 class="experience-subtitle project-title">Clime</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="window.open('https://github.com/nikhilyadvv')"
+                onclick="window.open('https://github.com/nikhilyadvv/clime')"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="window.open('https://nikhilyadav.tech')"
+                onclick="window.open('https://www.clime.live')"
               >
                 Live Demo
               </button>
@@ -402,22 +402,22 @@
           <div class="detail-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project.png"
+                src="./assets/portfolio.png"
                 alt="Project 2"
                 class="project-img"
               />
             </div>
-            <h2 class="experience-subtitle project-title">Project Two</h2>
+            <h2 class="experience-subtitle project-title">Portfolio Website</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="window.open('https://github.com/nikhilyadvv')"
+                onclick="window.open('https://github.com/nikhilyadvv/nikhilyadav.github.io')"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="window.open('https://nikhilyadav.tech')"
+                onclick="location.href='https://nikhilyadav.tech/'"
               >
                 Live Demo
               </button>
@@ -426,22 +426,22 @@
           <div class="detail-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project.png"
+                src="./assets/Tindog.png"
                 alt="Project 3"
                 class="project-img"
               />
             </div>
-            <h2 class="experience-subtitle project-title">Project Three</h2>
+            <h2 class="experience-subtitle project-title">Tindog</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="window.open('https://github.com/nikhilyadvv')"
+                onclick="window.open('https://github.com/nikhilyadvv/Tindog')"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="window.open('https://nikhilyadav.tech')"
+                onclick="window.open('https://nikhilyadvv.github.io/Tindog/')"
               >
                 Live Demo
               </button>
