--- a/index.html
+++ b/index.html
@@ -228,7 +228,11 @@
                 </div>
               </article>
               <article class="article-container-article">
-                <img src="./assets/materialui.png" alt="MaterialUI icon" class="icon" />
+                <img
+                  src="./assets/materialui.png"
+                  alt="MaterialUI icon"
+                  class="icon"
+                />
                 <div>
                   <h3>MaterialUI</h3>
                   <p>Intermediate</p>
@@ -497,7 +501,9 @@
           </ul>
         </div>
       </nav>
-      <p>Copyright &#169; 2023 Nikhil Yadav. All Rights Reserved.</p>
+      <p class="footer-copyright">
+        Copyright &#169; 2023 Nikhil Yadav. All Rights Reserved.
+      </p>
     </footer>
 
     <script src="script.js"></script>
