Project Pictures updated

--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
                       href="https://www.coursera.org/verify/47YJ72945QRY"
                       target="_blank"
                       class="article-container-a"
-                      >&#129170; verify</a
+                      >» verify</a
                     >
                   </div>
                 </div>
@@ -319,7 +319,7 @@
                       href="https://media.geeksforgeeks.org/courses/certificates/d77b3fb216d1bd26f9c78497f63bd410.pdf"
                       target="_blank"
                       class="article-container-a"
-                      >&#129170; verify</a
+                      >» verify</a
                     >
                   </div>
                 </div>
@@ -338,7 +338,7 @@
                       href="https://coursera.org/verify/AJ7CQYH2YPFX"
                       target="_blank"
                       class="article-container-a"
-                      >&#129170; verify</a
+                      >» verify</a
                     >
                   </div>
                 </div>
@@ -357,7 +357,7 @@
                       href="https://www.cloudskillsboost.google/public_profiles/7440db6e-8d38-46eb-a0ab-f71e84acd5ca"
                       target="_blank"
                       class="article-container-a"
-                      >&#129170; verify</a
+                      >» verify</a
                     >
                   </div>
                 </div>
