--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio - Nikhil Yadav</title>
+    <meta
+      name="description"
+      content="Explore Nikhil Yadav's portfolio - Software Engineer with expertise in front-end development. Check out projects, experience, and contact information."
+    />
+    <title>Nikhil Yadav Portfolio - Software Engineer</title>
     <link rel="icon" type="image/x-icon" href="./assets/favicon.ico" />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="mediaqueries.css" />
@@ -41,7 +45,7 @@
       <div class="section_pic-container">
         <img
           src="./assets/profile_pic.jpg"
-          alt="Nikhil's Profile Picture"
+          alt="Nikhil Yadav's Profile Picture"
           class="profile-pic"
         />
       </div>
@@ -63,13 +67,13 @@
         <div id="socials-container">
           <img
             src="./assets/linkedin.png"
-            alt="My Linkedin Profile"
+            alt="Nikhil Yadav's Linkedin"
             class="icon"
             onclick="window.open('https://www.linkedin.com/in/nikhilyadvv', '_blank');"
           />
           <img
             src="./assets/github.png"
-            alt="My Github Profile"
+            alt="Nikhil Yadav's Github"
             class="icon"
             onclick="window.open('https://github.com/nikhilyadvv', '_blank');"
           />
@@ -383,7 +387,7 @@
             <div class="article-container">
               <img
                 src="./assets/clime.png"
-                alt="Project 1"
+                alt="Clime Project"
                 class="project-img"
               />
             </div>
@@ -407,7 +411,7 @@
             <div class="article-container">
               <img
                 src="./assets/portfolio.png"
-                alt="Project 2"
+                alt="Portfolio Project"
                 class="project-img"
               />
             </div>
@@ -431,7 +435,7 @@
             <div class="article-container">
               <img
                 src="./assets/Tindog.png"
-                alt="Project 3"
+                alt="Tindog Project"
                 class="project-img"
               />
             </div>
@@ -468,7 +472,7 @@
         <div class="contact-info-container">
           <img
             src="./assets/email.png"
-            alt="Email icon"
+            alt="Nikhil Yadav's Email"
             class="icon contact-icon email-icon"
           />
           <p>
@@ -478,7 +482,7 @@
         <div class="contact-info-container">
           <img
             src="./assets/linkedin.png"
-            alt="Linkedin icon"
+            alt="Nikhil Yadav's Linkedin"
             class="icon contact-icon"
           />
           <p>
