--- a/index.html
+++ b/index.html
@@ -410,22 +410,22 @@
           <div class="detail-container color-container">
             <div class="article-container">
               <img
-                src="./assets/portfolio.png"
-                alt="Portfolio Project"
+                src="./assets/motion.png"
+                alt="Motion Project"
                 class="project-img"
               />
             </div>
-            <h2 class="experience-subtitle project-title">Portfolio Website</h2>
+            <h2 class="experience-subtitle project-title">Motion</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="window.open('https://github.com/nikhilyadvv/nikhilyadav.github.io')"
+                onclick="window.open('https://github.com/nikhilyadvv/motion')"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://nikhilyadav.tech/'"
+                onclick="window.open('https://mottion.netlify.app/')"
               >
                 Live Demo
               </button>
