about section updated

--- a/index.html
+++ b/index.html
@@ -150,11 +150,7 @@
               </div>
               <div class="text-container">
                 <p>
-                  As a Frontend Developer, My Portfolio page showcases my
-                  expertise in creating visually appealing and user-friendly
-                  websites. With a focus on clean and responsive design, I aim
-                  to create seamless user experiences. Explore my work to see
-                  how I bring ideas to life through code.
+                  I am Nikhil Yadav, an Associate Software Engineer at Carelon Global Solutions in Gurugram, Haryana. Specializing in front-end development, I create visually appealing and user-friendly websites with expertise in HTML, CSS, JavaScript, React.js, and Node.js. I am dedicated to utilizing my knowledge and experience to develop innovative solutions and create powerful user experiences. Looking forward to leveraging my skills and experience to contribute meaningfully in my role at Carelon Global Solutions.
                 </p>
               </div>
             </div>
