--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                       <div class="education-detail-details2">
                         <h4>Lovely Professional University, Jalandhar</h4>
                         <p>
-                          &#x2022; Current GPA : 7.70 <br />
+                          &#x2022; CGPA : 7.78 <br />
                           &#x2022; Minor in Full Stack Development <br />
                           &#x2022; Elective in Tourism Destination
                         </p>
@@ -127,7 +127,7 @@
                       <div class="education-detail-details2">
                         <h4>Suraj School, Gurugram</h4>
                         <p>
-                          &#x2022; Percentage : 95% <br />
+                          &#x2022; Percentage : 95.6% <br />
                           &#x2022; Board: Central Board of Secondary Education
                           <br />
                           &#x2022; Subjects : English, Physics, Chemistry,
@@ -331,11 +331,11 @@
                   class="icon"
                 />
                 <div class="article-container-h3">
-                  <h3>Divide & Conquer, Sorting and Searching algorithms</h3>
+                  <h3>Building Web Applications in PHP</h3>
                   <div class="article-container-p">
-                    <p>(Coursera - Stanford University)</p>
+                    <p>(Coursera - University of Michigan)</p>
                     <a
-                      href="https://coursera.org/verify/AJ7CQYH2YPFX"
+                      href="https://coursera.org/verify/C48QMBNNT59F"
                       target="_blank"
                       class="article-container-a"
                       >» verify</a
@@ -430,22 +430,22 @@
           <div class="detail-container color-container">
             <div class="article-container">
               <img
-                src="./assets/Tindog.png"
-                alt="Tindog Project"
+                src="./assets/hdd.png"
+                alt="Heart Disease Detection Project"
                 class="project-img"
               />
             </div>
-            <h2 class="experience-subtitle project-title">Tindog</h2>
+            <h2 class="experience-subtitle project-title">Heart Disease Detection</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="window.open('https://github.com/nikhilyadvv/Tindog')"
+                onclick="window.open('https://github.com/nikhilyadvv/Heart_Disease_Detection_Capstone_Project')"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="window.open('https://nikhilyadvv.github.io/Tindog/')"
+                onclick="window.open('https://heartdiseasedetection.streamlit.app')"
               >
                 Live Demo
               </button>
@@ -502,7 +502,7 @@
         </div>
       </nav>
       <p class="footer-copyright">
-        Copyright &#169; 2023 Nikhil Yadav. All Rights Reserved.
+        Copyright &#169; 2024 Nikhil Yadav. All Rights Reserved.
       </p>
     </footer>
 
