--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="window.open('https://www.clime.live')"
+                onclick="window.open('https://cliime.netlify.app/')"
               >
                 Live Demo
               </button>
